[package]
name = "wasm-utils"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
ic-cdk = "0.8.0-beta.0"
ic-cdk-macros = "0.8.0-beta.0"
serde = "1.0"
serde_bytes = "0.11"
candid = "0.9.0-beta.2"
ic-wasm = { version = "0.3.7", default-features = false }
sha2 = "0.10.6"
walrus = "0.19"

[profile.release]
lto = true
opt-level = 'z'
