[package]
name = "wasm-utils"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
ic-cdk = { version = "0.10.0", git = "https://github.com/dfinity/cdk-rs.git", branch = "beta" }
serde = "1.0"
serde_bytes = "0.11"
candid = "0.9.0"
ic-wasm = { version = "0.4.0", default-features = false }
sha2 = "0.10.6"
walrus = "0.20"

[profile.release]
lto = true
opt-level = 'z'
