[package]
name = "wasm-utils"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
ic-cdk = "0.16"
serde = "1.0"
serde_bytes = "0.11"
candid = "0.10"
ic-wasm = { version = "0.8.2", default-features = false }
sha2 = "0.10.6"

[profile.release]
lto = true
opt-level = 2
